--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -63,7 +63,8 @@
   .about-containers,
   .contact-info-upper-container,
   .btn-container {
-    flex-wrap: wrap;
+    flex-direction: column;
+    gap: 2rem;
   }
   .contact-info-container {
     margin: 0;
@@ -99,5 +100,9 @@
   }
   .project-description {
     font-size: 16px;
+  }
+  .section-wrapper {
+    gap: 1rem;
+    padding: 1rem;
   }
 }
